export_check_2.txt
Starting Metro Bundler
warning: Bundler cache is empty, rebuilding (this may take a minute)

SyntaxError: SyntaxError: C:\Users\Bruno\Documents\AgroGB\mobile_app\src\components\cadastro\CadastroInsumos.js: Unexpected token, expected "," (192:12)

  190 |             </View>
  191 |
> 192 |             {loading ? <ActivityIndicator size="large" color="#15803D" style={{ marginTop: 50 }} /> :
      |             ^
  193 |                 <SectionList
  194 |                     sections={Object.values(items.reduce((acc, item) => {
  195 |                         if (!acc[item.tipo]) acc[item.tipo] = { title: item.tipo, data: [] };
SyntaxError: C:\Users\Bruno\Documents\AgroGB\mobile_app\src\components\cadastro\CadastroInsumos.js: Unexpected token, expected "," (192:12)

  190 |             </View>
  191 |
> 192 |             {loading ? <ActivityIndicator size="large" color="#15803D" style={{ marginTop: 50 }} /> :
      |             ^
  193 |                 <SectionList
  194 |                     sections={Object.values(items.reduce((acc, item) => {
  195 |                         if (!acc[item.tipo]) acc[item.tipo] = { title: item.tipo, data: [] };
    at constructor (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:365:19)
    at FlowParserMixin.raise (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:6599:19)
    at FlowParserMixin.unexpected (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:6619:16)
    at FlowParserMixin.expect (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:6899:12)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:11661:14)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:3591:18)
    at FlowParserMixin.parseExprAtom (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:11331:23)
    at FlowParserMixin.parseExprAtom (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:4764:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:11081:23)
    at FlowParserMixin.parseUpdate (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10899:61)
    at FlowParserMixin.parseExprOps (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:3549:18)
    at FlowParserMixin.parseExpressionBase (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10784:23)
    at C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10780:39
    at FlowParserMixin.allowInAnd (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12421:16)
    at FlowParserMixin.parseExpression (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:10780:17)
    at FlowParserMixin.parseReturnStatement (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13142:28)
    at FlowParserMixin.parseStatementContent (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12798:21)
    at FlowParserMixin.parseStatementLike (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12767:17)
    at FlowParserMixin.parseStatementLike (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:2918:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13316:61)
    at FlowParserMixin.parseBlockBody (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13309:10)
    at FlowParserMixin.parseBlock (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13297:10)
    at FlowParserMixin.parseFunctionBody (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12100:24)
    at FlowParserMixin.parseFunctionBody (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:2895:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12086:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:2903:18)
    at C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13445:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12403:14)
    at FlowParserMixin.parseFunction (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13444:10)
    at FlowParserMixin.parseExportDefaultExpression (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13907:19)
    at FlowParserMixin.parseExportDefaultExpression (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:2966:18)
    at FlowParserMixin.parseExport (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13828:25)
    at FlowParserMixin.parseStatementContent (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12878:27)
    at FlowParserMixin.parseStatementLike (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12767:17)
    at FlowParserMixin.parseStatementLike (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:2918:24)
    at FlowParserMixin.parseModuleItem (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12744:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13316:36)
    at FlowParserMixin.parseBlockBody (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:13309:10)
    at FlowParserMixin.parseProgram (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12622:10)
    at FlowParserMixin.parseTopLevel (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:12612:25)
    at FlowParserMixin.parseTopLevel (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:3685:28)
    at FlowParserMixin.parse (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:14488:25)
    at parse (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\parser\lib\index.js:14501:26)
    at parser (C:\Users\Bruno\Documents\AgroGB\mobile_app\node_modules\@babel\core\lib\parser\index.js:41:34)
